fix homepage primary banner alignment

--- a/site/src/site.less
+++ b/site/src/site.less
@@ -327,14 +327,13 @@
 .demo-banner__heading-2 {
 	font-size: 32px;
 	font-weight: 300;
-	margin-bottom: 1em !important;
-	margin-top: 0 !important;
+	margin: 0 !important;
 }
 
 
 // buttons
 .demo-banner__buttons {
-	margin-top: 30px;
+	margin-top: 60px;
 }
 .demo-banner__button {
 	font-size: 18px;
@@ -467,12 +466,12 @@
 	.square(240px);
 	background: url('../images/hero-bg.svg') no-repeat left top;
 	background-size: 240px, 240px;
-	left: -84px;
+	left: -80px;
 	position: absolute;
 	top: -75px;
 
 	@media (min-width: 768px) {
-		left: -94px;
+		left: -90px;
 	}
 }
 
